--- a/FrontBackMatter/executivesummary.tex
+++ b/FrontBackMatter/executivesummary.tex
@@ -4,12 +4,12 @@
 \chapter*{Executive Summary}
 \addcontentsline{toc}{chapter}{\numberline{}Executive Summary}
 
-\par The use of fossil fuels is both harmful to the environment and unsustainable. It is linked to many problems worldwide such as greenhouse gas emissions, which cause climate change and health issues such as cancer and respiratory problems. Furthermore, the earth's fossil fuel resources may be depleted by the end of the century.
-\par In a legislative effort to reduce the use of fossil fuels in the Commonwealth of Massachusetts, the Global Warming Solutions Act (GWSA) was enacted in August of 2008. The GWSA created a framework for reducing heat-trapping emissions to levels that scientists believe gives humanity a chance of avoiding the worst effects of global warming. Pursuant to the GWSA, all sectors of the economy must reach a target of a 25\% reduction of Greenhouse Gas (GHG) emissions by 2020 and an 80\% reduction by 2050. As a result of the GWSA, many programs exist regarding energy efficiency and the use of renewable resources.
-\par The Massachusetts Department of Energy Resources (DOER) has started the SAPHIRE and Renewable Thermal Programs to help motivate the implementation of renewable resources. These programs have made an effort toward reducing fossil fuel use in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. To further the effectiveness and reach of these programs, there is a need for more evaluation and promotion. We worked with the DOER to address this issue.
+\par The use of fossil fuels is both harmful to the environment and unsustainable. It is linked to many problems such as greenhouse gas emissions, which cause climate change and health issues such as cancer and respiratory problems. Furthermore, the earth's fossil fuel resources may be depleted by the end of the century.
+\par To reduce the use of fossil fuels in the Commonwealth of Massachusetts, the Global Warming Solutions Act (GWSA) was enacted in August of 2008. The GWSA created a framework for reducing heat-trapping emissions to levels that scientists believe gives humanity a chance of avoiding the worst effects of climate change. Pursuant to the GWSA, all sectors of the economy must reach a target of a 25\% reduction of greenhouse gas (GHG) emissions by 2020 and an 80\% reduction by 2050. As a result of the GWSA, many programs have been implemented by state agencies to promote energy efficiency and the use of renewable resources.
+\par The Massachusetts Department of Energy Resources (DOER) has started the SAPHIRE and Renewable Thermal Programs to help motivate the implementation of renewable resources in buildings. The focus of these programs is on buildings since buildings account for 49% of all energy used in MA, compared to the national average of 41%. These programs have made an effort toward reducing fossil fuel use in schools and public buildings in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. To further the effectiveness and reach of these programs, there is a need for more evaluation and promotion. We worked with the DOER to address this issue.
 
 \section*{Goal, Objectives and Methods}
-\par The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce case studies to evaluate pilot renewable thermal programs:
+\par The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce case studies that evaluate pilot renewable thermal programs:
 \begin{enumerate}
   \item{Identify the questions and concerns past project site leaders have had when considering implementing a renewable thermal project.}
   \item{Determine project implementation processes and challenges of renewable thermal projects.}
@@ -17,9 +17,9 @@
 \end{enumerate}
 
 \par Our first objective was to \textbf{identify the questions and concerns past project site leaders have had when considering implementing a renewable thermal project.} We utilized metrics formed from an interview with our sponsor to produce interview questions that we used when interviewing stakeholders at each project site. In order to identify questions and concerns past project site leaders have had we interviewed the on site project leaders and stakeholders including but not limited to: school superintendents, housing development directors, department of housing representatives, school facilities managers, and grant coordinators at the three case study sites.
-\par Our second objective was to \textbf{determine project implementation processes and challenges of renewable thermal projects.} The application of renewable resources in buildings such as schools and public housing initiatives is relatively new in Massachusetts. Consequently, we found it important to produce an explanation of the entirety of the project process including decisions and how they were made, incentives and assistance that were provided, and any barriers encountered and how they were overcome. We interviewed those who were/are in charge of each site in regards to the implementation process of the DOER renewable thermal project at each project site.
-\par Our third objective was to \textbf{determine how these renewable thermal projects are performing in regards to cost and energy usage.} When producing these case studies, we desired quantitative data to illustrate the effectiveness of the project. In an effort to achieve this goal, we attempted to gather information from utility bills and projected values from feasibility studies as well as utilized existing energy auditing tools to collect and categorize numerical data from each project site.
-\par Using the information obtained through the previous tasks, we produced case studies on the three renewable thermal projects to promote future renewable thermal energy projects. We then compiled this information for each of our three sites using the data we collected and organized from the interviews and qualitative data analysis we conducted.
+\par Our second objective was to \textbf{determine project implementation processes and challenges of renewable thermal projects.} The application of renewable resources in buildings such as schools and public housing initiatives is relatively new in Massachusetts. Consequently, we produced an explanation of the entirety of the project planning and implementation processes, including decisions and how they were made, incentives and assistance that were provided, and barriers encountered and how they were overcome. We interviewed those who were/are in charge of each site in regards to the implementation process of the DOER renewable thermal project at each project site.
+\par Our third objective was to \textbf{determine how the renewable thermal projects are performing in regards to cost and energy usage.} When producing these case studies, we desired quantitative data to illustrate the effectiveness of the project. In an effort to achieve this goal, we attempted to gather information from utility bills and projected values from feasibility studies as well as utilized existing energy auditing tools to collect and categorize numerical data from each project site.
+\par Using the information obtained through the previous tasks, we produced case studies on the three renewable thermal projects to promote future renewable thermal energy projects.
 
 \noindent
 The three projects we focused on when completing these objectives and producing our deliverables were:
@@ -43,54 +43,54 @@ The three projects we focused on when completing these objectives and producing 
 \noindent
 \textbf{Site Findings}
 \begin{itemize}
-  \item{Commissioning a feasibility study prior to beginning a renewable thermal project can be very valuable}
-  \item{Failure to consider the context in which a renewable energy technology is being implemented can lead to poor performance and increased required maintenance}
-  \item{Educating the community about new technology before installation can lead to community support}
-  \item{Working with experienced engineers can make a big difference in the project timeline and post project effectiveness}
-  \item{Improving a building’s energy efficiency improvements prior to or in addition to upgrading the heating system may lead to increased cost savings}
-  \item{Public housing rules and regulations can be barriers when implementing a renewable technology project}
-  \item{Failure to consider context when choosing a metering system can lead to problems with gathering data}
+  \item{Commissioning a feasibility study prior to beginning a renewable thermal project can be very valuable.}
+  \item{Failure to consider the context in which a renewable energy technology is being implemented can lead to poor performance and increased required maintenance.}
+  \item{Educating the community about new technology before installation can lead to community support.}
+  \item{Working with experienced engineers can make a big difference in the project timeline and post project effectiveness.}
+  \item{Improving a building’s energy efficiency improvements prior to or in addition to upgrading the heating system may lead to increased cost savings.}
+  \item{Public housing rules and regulations can be barriers when implementing a renewable technology project.}
+  \item{Failure to consider context when choosing a metering system can lead to problems with gathering data.}
 \end{itemize}
-\par While many of our findings are specific to the project sites we studied, it is important to note that these findings can be applied to many renewable thermal project sites to come.
+\par While many of our findings are specific to the project sites we studied, it is important to note that these findings can be applied to many renewable thermal project sites in the future.
 
 \section*{Recommendations}
-\par From our findings we compiled a list of recommendations that we presented to the DOER. It is our hope that the DOER will be able to use these recommendations to make improvements to future renewable thermal projects. It is important to note that our data analysis, and thus our recommendations are not without limitations. We were unable to provide an analysis of projected outcomes and actual outcomes relating to greenhouse gas emissions, renewable system energy efficiency, annual energy use, and annual fuel cost comparison of renewable systems and fossil fuel systems due to the lack of access to quantitative data at each site. Furthermore, our recommendations stem from site visits at only three project sites in a young program. For this reason, our recommendations reflect only our analysis of qualitative data we collected including interviews and onsite visits from each of the three project sites. The recommendations are organized into major categories that follow.
+\par From our findings we compiled a list of recommendations that we presented to the DOER. It is our hope that the DOER will be able to use these recommendations to make improvements to future renewable thermal projects. It is important to note that our data analysis, and thus our recommendations are not without limitations. We were unable to provide an analysis of projected outcomes and actual outcomes relating to greenhouse gas emissions, renewable system energy efficiency, annual energy use, and annual fuel cost comparison of renewable systems and fossil fuel systems due to the lack of access to quantitative data at each site. Furthermore, our recommendations stem from site visits at only three project sites in a young program. For this reason, our recommendations reflect only our analysis of qualitative data we collected including interviews and onsite visits from each of the three project sites. 
 
 
 \noindent
 \textbf{Recommendations Relating to Informational Material for Potential Project Sites}\\
 \indent After speaking with our sponsor regarding her past experiences working with renewable thermal projects, we learned that potential project site leaders are most confident when presented with case studies of similar projects and documentation of cost comparisons between renewable and fossil fuel systems. Therefore, we recommend that:
 \begin{itemize}
-  \item{The DOER continue to create case studies to provide up to date information to potential project sites about existing renewable thermal projects}
-  \item{The DOER bring case studies when consulting with new project sites}
-  \item{The DOER provide examples of cost comparisons of fossil fuels and renewable energy including implementation and operational costs when consulting potential project sites}
+  \item{The DOER continue to create case studies to provide up to date information to potential project sites about existing renewable thermal projects.}
+  \item{The DOER bring case studies when consulting with new project sites.}
+  \item{The DOER provide examples of cost comparisons of fossil fuels and renewable energy including implementation and operational costs when consulting potential project sites.}
 \end{itemize}
 
 \noindent
 \textbf{Recommendation Relating to Community Education}\\
 \indent Following our analysis of the project process at the Southern Berkshire Regional School, we learned of the importance of community education and community support. Therefore, we recommend that:
 \begin{itemize}
-  \item{The DOER provide methods or examples for conducting outreach and education of the community on renewable thermal technologies when consulting potential project sites}
+  \item{The DOER provide methods or examples for conducting outreach and education of the community on renewable thermal technologies when consulting potential project sites.}
 \end{itemize}
 
 \noindent
 \textbf{Recommendations Relating to Feasibility Studies}\\
 \indent In all of the project sites that we studied, data from our on-site visits highlighted the importance of commissioning a feasibility study. Therefore, we recommend that:
 \begin{itemize}
-  \item{A feasibility study be completed at each potential project site}
-  \item{Potential project sites commission a feasibility study prior to beginning a renewable thermal project}
-  \item{The DOER strongly suggest or make it a requirement of their grant program that renewable thermal project sites commission a feasibility study prior to beginning a renewable thermal project}
-  \item{The DOER provide funding to commission a feasibility study that include a comparison of multiple renewable thermal heating and cooling systems}
-  \item{The DOER provide funding to commission a feasibility study that compares different types of metering systems and their application in the project site before providing funding to sites for metering systems}
+  \item{A feasibility study be completed at each potential project site.}
+  \item{Potential project sites commission a feasibility study prior to beginning a renewable thermal project.}
+  \item{The DOER strongly suggest or make it a requirement of their grant program that renewable thermal project sites commission a feasibility study prior to beginning a renewable thermal project.}
+  \item{The DOER provide funding to commission a feasibility study that includes a comparison of multiple renewable thermal heating and cooling systems.}
+  \item{The DOER provide funding to commission a feasibility study that compares different types of metering systems and their application in the project site before providing funding to sites for metering systems.}
 \end{itemize}
 
 \noindent
 \textbf{Recommendations Relating to Experienced Engineers and Contractors}\\
 \indent We heard from interviewees at all three sites that the experience of the engineers working on the project makes a huge difference in the project planning and installation processes. We therefore recommend that:
 \begin{itemize}
-  \item{Project sites work with engineering firms and contractors that are familiar with renewable technologies}
-  \item{The DOER provide a list of engineering firms and contractors that are familiar with each type of renewable thermal technology to each project site}
-  \item{There be investment in educating contractors and electricians in renewable thermal technology}
+  \item{Project sites work with engineering firms and contractors that are familiar with renewable technologies.}
+  \item{The DOER provide a list of engineering firms and contractors that are familiar with each type of renewable thermal technology to each project site.}
+  \item{There be investment in educating contractors and electricians in renewable thermal technology.}
 \end{itemize}
 
 \par We achieved our goal of supporting the DOER by evaluating three renewable thermal projects to improve and promote the installation of renewable thermal systems, and produced informational case studies for each project site we studied. It is our hope that the case studies we produced will both promote the DOER’s renewable thermal programs and provide information to potential project site leaders that will, along with the list of recommendations, aid in improving renewable thermal project processes. As the number of successful renewable thermal projects increases in the Commonwealth of Massachusetts, greenhouse gas emissions and fossil fuel dependence will decrease, resulting in a healthier and more sustainable future.
