--- a/findings.tex
+++ b/findings.tex
@@ -147,7 +147,7 @@
 
 \subsubsection{PowerWise Metering}
 \par The Sudbury Public Housing Development installed a metering tool, PowerWise, to measure the electricity usage of units with ASHPs and compare to the electricity usage of the control units. Other public housing developments have installed ASHPs, but have not been able to effectively monitor the energy savings due to a lack of accurate and specific data. In the previous installations, the only accessible information was the billing information from an entire building’s electricity use. From this, the DHCD has been able to estimate how much money the installation of the ASHPs has been saving them, but they do not have concrete data on what percentage of the savings are actually coming from the switch to ASHPs. Sudbury was to be the test site for their new metering technology to obtain that missing data.
-\par The PowerWise metering system was first installed in four cold climate one-to-one air source heat pumps, and four control units with electric baseboard heat. This was done to determine the baseline KWH usage over a full year by comparing the four pilot units with the four control units. However, due to the manner of ASHP installation and difficulties with unorganized circuit breakers, the DHCD hadn’t been able to obtain and analyze the data.  In September, 2015, the PowerWise engineers worked with the DHCD engineer in an effort to correct the wiring mistakes in order to produce accurate and usable data for the pilot and control units. However, due to the nature of the older buildings and the complicated circuitry, this took several attempts. As of 9/17/2015, the electricity usage is said to be accurate. Due to the late availability of accurate data, we were not able to provide substantial data analysis regarding electricity usage trends and cost savings.
+\par The PowerWise metering system was first installed in four cold climate one-to-one air source heat pumps, and four control units with electric baseboard heat. This was done to determine the baseline KWH usage over a full year by comparing the four pilot units with the four control units. However, due to the manner of ASHP installation and difficulties with unorganized circuit breakers, the DHCD hadn’t been able to obtain and analyze the data.  In September, 2015, the PowerWise engineers worked with the DHCD engineer in an effort to correct the wiring mistakes in order to produce accurate and usable data for the pilot and control units. However, due to the nature of the older buildings and the complicated circuitry, this took several attempts. As of September 17, 2015, the electricity usage is said to be accurate. Due to the late availability of accurate data, we were not able to provide substantial data analysis regarding electricity usage trends and cost savings.
 
 \subsubsection{Major Lessons Learned}
 \par From our interview and onsite visit at the Sudbury Public Housing Development, we developed a list of "lessons learned" that is included in our case studies.
@@ -158,7 +158,8 @@
 \par Several issues can be worked around by effectively educating the tenants about the systems being installed in their homes and setting up the appropriate infrastructure. The tenants that had the new systems installed in their apartment at Sudbury were not instructed on how to use or maintain their new ASHPs. In fact, not even the housing director was given any instruction on the operation or maintenance of the systems. The control for an ASHP is more complex than a traditional thermostat, but according to our interview if it is explained to the tenants, it can be just as easy to use. In a more complete installation where every unit in the housing development is upgraded, the responsibility of maintenance would become a routine for the facilities staff and no longer fall to the tenants. In the realm of electricity usage metering, a full installation would increase the sample size and possibly normalize out some the outliers from the data. 
 
 \section{Site Findings}
-\par After we interviewed stakeholders and project leaders from each project site we studied, we noticed that each project process was complex in its own way, and each project involved different successes and challenges. We compiled the following findings after analyzing the interview transcripts and feasibility studies from each project site. Included with each finding is information and evidence from various project sites.
+\par After we interviewed stakeholders and project leaders from each project site we studied, we noticed that each project process was complex in its own way, and each project involved different successes and challenges. We compiled the following findings after analyzing the interview transcripts and feasibility studies from each project site. Included with each finding is information and evidence from various project sites.\\
+
 Site Findings:
   \begin{itemize}
     \item{Commissioning a feasibility study prior to beginning a renewable thermal project can be very valuable}
@@ -205,19 +206,19 @@ Site Findings:
 \par Since most of the DOER’s grant money goes to public organizations, ensuring that the projects have the support of the community is very important. In most cases, the DOER’s contribution only partially funds these projects, so it is up to the community members who use these public buildings to pay for any work on them in the form of local taxes. Lack of community support can be a barrier to both implementation and effective operation. We found that educating the community about the new technology before installation can lead to community support. In the following sections, we present evidence for this finding from each project site where it was applicable.
 
 \subsubsection{Southern Berkshire Regional School}
-\par The Southern Berkshire Regional School District received grants totalling around 40\% of the total project cost. This meant that the remainder of the project was to be funded using the taxpayer’s contributions. Even though the money would be going to improve the local school building, the community members were hesitant to approve the spending. This almost prevented the project from being implemented.
+\par The Southern Berkshire Regional School District received grants totaling around 40\% of the total project cost. This meant that the remainder of the project was to be funded using the taxpayer’s contributions. Even though the money would be going to improve the local school building, the community members were hesitant to approve the spending. This almost prevented the project from being implemented.
 \par By providing effective education and instruction to the community, the Southern Berkshire Regional School District was able to obtain the community support necessary for the project to move forward. According to one of the two individuals we interviewed who worked very closely with acquiring the grants from the DOER, the school district "brought a [biomass] expert to have him participate in several meetings so that the public could be educated." In addition, there was a community press release that showed breakdown of taxpayer increases per year because of the renovation. For this community, this method worked to ease the minds of the taxpayers that this project could be paid for with only a minor increase in taxes each year. Through information on the technology and on the personal impact, the Southern Berkshire Regional School District was able to secure support and funding for their renovation.
 
 \subsubsection{Sudbury Public Housing Development}
 \par At the Sudbury Public Housing Development, the installation of the ASHPs was fully funded by the DOER, and the DHCD went ahead with the installations without first gaining support from the tenants. This has proven to be an issue with regards to operation and maintenance of the ASHPs. Since the tenants were never instructed how to operate or maintain their units, there have been complaints about the technology including one tenant who demanded that ASHP be removed from his unit. Some tenants also expressed that they did not believe that the new systems would work, and once it was installed, they confused the unpleasant sound of the previously installed water heater with the ASHPs.
 \par The Sudbury Public Housing Development, while not proactive about educating their tenants, did eventually provide maintenance instructional materials to the tenant who asked for them. That tenant eventually went and personally taught the other tenants how to operate their ASHPs. Prior to the education, the tenants were incorrectly controlling the units, which caused much more energy to be used. Instead of leaving the ASHPs in automatic mode, some tenants were turning the ASHPs on and off which causes a greater power consumption.
-\par It is important for people to know that the new system they are implementing actually works. When the community trusts and understands the system, there will in some cases be more support for it and in some cases more efficient operations and maintenance. The management of all of the projects we investigated found it useful to visit other sites that have installed similar technologies. Seeing proof of it working for another community boosts the trust in the technology. The housing director at Sudbury told us that "just hearing from other tenants about it and the comfort level that you /[a tenant/] felt… is the best recommendation." Even hearing the stories of other sites, in a case study for example, can serve this purpose for many sites in the planning phases.
+\par It is important for people to know that the new system they are implementing actually works. When the community trusts and understands the system, there will in some cases be more support for it and in some cases more efficient operations and maintenance. The management of all of the projects we investigated found it useful to visit other sites that have installed similar technologies. Seeing proof of it working for another community boosts the trust in the technology. The housing director at Sudbury told us that "just hearing from other tenants about it and the comfort level that you [a tenant] felt... is the best recommendation." Even hearing the stories of other sites, in a case study for example, can serve this purpose for many sites in the planning phases.
 
 \subsection{Working with Experienced Engineers Can Make a Big Difference In The Project Timeline and Post Project Effectiveness}
 \par Since the implementation of renewable thermal technologies for heating and cooling systems is just starting in Massachusetts, there are not many engineers that are familiar with these systems. Working with experienced engineers on this type of project makes a big difference to the success of the project. In the following sections, we provide evidence from each of the three case studies that support this finding.
 
 \subsubsection{Amherst College Bunker Building}
-\par Amherst College was recommended, by the DOER, to contract Froling, an Austrian company that has more than four decades of experience in wood heating technology. Since Amherst worked with a firm that is considered the "pioneers" in this field, their construction phase went almost perfect. They did not have many discrepancies when deciding what type of system to install. Since Amherst College worked with experienced engineers, they were well prepared for any unknown obstacle. During the construction phase, they suffered from a harsh winter that produced a delay in the timeline of the project. Nevertheless, this delay was minimal and they were not really affected in terms of cost or comfort.
+\par Amherst College was recommended, by the DOER, to contact Froling, an Austrian company that has more than four decades of experience in wood heating technology. Since Amherst worked with a firm that is considered the "pioneers" in this field, their construction phase went almost perfect. They did not have many discrepancies when deciding what type of system to install. Since Amherst College worked with experienced engineers, they were well prepared for any unknown obstacle. During the construction phase, they suffered from a harsh winter that produced a delay in the timeline of the project. Nevertheless, this delay was minimal and they were not really affected in terms of cost or comfort.
 \par Another benefit of working with experienced engineers is that once the system is running they can provide technical assistance to the maintenance staff if situations arise. Froling Energy has been contracted to do the first annual maintenance, and helping Amherst College maintenance staff take care of the system. Furthermore, Froling Energy monitors the system remotely, informing Amherst College if there is any problem with the boilers. Working with experienced engineers is very important since it can make a difference in project effectiveness during and after the project implementation. The individual we interviewed from Amherst College said that working with Froling Energy has been the best decision since wood heating for this company "is their bread and butter."
 
 \subsubsection{Southern Berkshire Regional School}
@@ -231,7 +232,7 @@ Site Findings:
 \par Making improvements to a building’s energy efficiency can affect the amount of energy that the building is consuming and reduce fuel costs. This finding was exemplified in the case of the Southern Berkshire Regional School.
 
 \subsubsection{Southern Berkshire Regional School}
-\par The Southern Berkshire Regional School had a energy management system renovation in 2010, making the building more energy efficient. In addition, this project was funded by DOER grants."Annually we’re looking at savings of 3,508 gallons of heating oil because of these changes..." said one individual we interviewed who worked closely with increasing the building’s energy efficiency (Southern Berkshire Regional School District, 2010).
+\par The Southern Berkshire Regional School had a energy management system renovation in 2010, making the building more energy efficient. In addition, this project was funded by DOER grants. "Annually we’re looking at savings of 3,508 gallons of heating oil because of these changes..." said one individual we interviewed who worked closely with increasing the building’s energy efficiency (Southern Berkshire Regional School District, 2010).
 
 \subsection{Public Housing Rules and Regulations Can Be Barriers When Implementing a Renewable Technology Project}
 \par While investigating different aspects of the project process at the Sudbury Public Housing Development, we learned that public housing rules and regulations can be barriers when implementing a renewable technology project. 
