--- a/methodology.tex
+++ b/methodology.tex
@@ -20,7 +20,7 @@
     \subsection{Southern Berkshire Regional School - Biomass Pellet Heating}
     \par The Southern Berkshire Regional School District project was funded under the SAPHIRE Program and began construction during Summer 2015. The construction was not completed by the time we created the case studies, so post project implementation data could not be obtained. It was therefore used as a reference to understand the process of planning, designing, acquisition, and installation of these biomass systems. This site illustrates setbacks that can occur in the construction process as well as the solutions to the problems these setbacks can cause.
 
-    \subsection{Sudbury Public Housing Development - Air-source Heat Pumps}
+    \subsection{Sudbury Public Housing Development - Air-Source Heat Pumps}
     \par The Sudbury Housing Development is a low income housing development that has had air source heat pumps installed in four pilot units. This project was funded by the SAPHIRE Program. This project was chosen as a focus due to the use of air source heat pumps, a fairly new technology in New England. This project also illustrates challenges relating to metering and data collection.
 
   \section{Objective \#1: Identifying Concerns of Past Project Site Leaders}
