--- a/recommendations.tex
+++ b/recommendations.tex
@@ -6,20 +6,23 @@
 \par In this chapter we present recommendations to improve the planning and implementation process for renewable thermal technologies through DOER renewable thermal programs. Each recommendation is supported by our findings and review of relevant literature. It is important to note that our data analysis, and thus our recommendations are not without limitations. We were unable to provide an analysis of projected outcomes and actual outcomes relating to greenhouse gas emissions, renewable system energy efficiency, annual energy use, and annual fuel cost comparison of renewable systems and fossil fuel systems due to the lack of access to quantitative data at each site. Furthermore, our recommendations stem from site visits at only three project sites in a young program. For this reason, our recommendations reflect our analysis of qualitative data we collected including interviews and onsite visits from each of the three project sites. The recommendations are organized into major categories in the following sections.
 
 \section{Recommendations Relating to Informational Material for Potential Project Sites}
+\par After speaking with our sponsor regarding her past experiences working with renewable thermal projects, we learned that potential project site leaders are most confident when presented with case studies of similar projects and documentation of cost comparisons between renewable and fossil fuel systems. Therefore, we recommend that:
 \subsection{We recommend that the DOER continue to create case studies to provide up to date information to potential project sites about existing renewable thermal projects}  
 \par By continuing to create these case studies, found in Appendix 5, the DOER will be able to present more examples of similar projects for potential site leaders to learn from. As seen in the following section, we learned about the importance of providing feasibility studies to potential project sites from the interview with our sponsor. It is our hope that this will lead to more renewable thermal projects each with smoother project processes.
 
 \subsection{We recommend that the DOER bring case studies when consulting with new project sites}
-\par In the interview with our sponsor from the DOER, we learned that potential project site leaders often ask the question of who else has implemented a similar renewable thermal project to the one they’re considering. Our sponsor mentioned that while potential project site leaders seemed wary at first, due to many of these technologies being so new, when they learned that similar projects had been implemented in similar municipalities, the potential project site leaders felt more comfortable and at ease. When we interviewed the two individuals Southern Berkshire Regional School District, we showed them an example case study, found in Appendix 2. They said that they would have liked to have seen a similar case study at the beginning of their project process. These project site leaders from the Southern Berkshire Regional School District and the project site leaders from Amherst College both mentioned that they visited other sites that had already implemented biomass heating systems before making the final decision to move forward with their projects. By providing the potential project sites with case studies of similar projects, the DOER will be able to continue to provide the potential project sites not only with information regarding an example project process but also a point of contact for potential project site leaders to use when making their final decisions regarding their renewable thermal project.
+\par In the interview with our sponsor from the DOER, we learned that potential project site leaders often ask the question of who else has implemented a similar renewable thermal project to the one they’re considering. Our sponsor mentioned that while potential project site leaders seemed wary at first, due to many of these technologies being so new, when they learned that similar projects had been implemented in similar municipalities, the potential project site leaders felt more comfortable and at ease. When we interviewed the two individuals from Southern Berkshire Regional School District, we showed them an example case study, found in Appendix 2. They said that they would have liked to have seen a similar case study at the beginning of their project process. These project site leaders from the Southern Berkshire Regional School District and the project site leaders from Amherst College both mentioned that they visited other sites that had already implemented biomass heating systems before making the final decision to move forward with their projects. By providing the potential project sites with case studies of similar projects, the DOER will be able to continue to provide the potential project sites not only with information regarding an example project process but also a point of contact for potential project site leaders to use when making their final decisions regarding their renewable thermal project.
 
 \subsection{We recommend that the DOER provide examples of cost comparisons of fossil fuels and renewable energy including implementation and operational costs when consulting potential project sites}
 \par Given the strong interest in the financial aspects of proposed projects we recommend presenting factual data that shows the cost comparison of the renewable systems considered along with a comparable fossil fuel system as an incentive for potential project leaders. Frequently, renewable resources can be more affordable than fossil fuels but project site leaders can be unaware of this since they do not have a concrete comparison between the two. For example, Amherst College and Southern Berkshire Regional School both initially considered non-renewable resources and it was not until they did a long-term cost comparison between renewable and non renewable heating sources that they noticed that a renewable resource would be more affordable overall, especially with the DOER incentive. 
 
-\section{Recommendation Relating to Community Education} 
+\section{Recommendation Relating to Community Education}
+\par Following our analysis of the project process at the Southern Berkshire Regional School, we learned of the importance of community education and community support. Therefore, we recommend that:
 \subsection{We recommend that the DOER provide methods or examples for conducting outreach and education of the community on renewable thermal technologies when consulting potential project sites}
 It is important to educate the community about the new technology that project site leaders are aiming to implement, especially if a portion of the project is to be publicly funded. As noted in finding 4.3.3, if Southern Berkshire had not educated the community and gained community support, they would not have been able to fund the project. Fortunately, the DOER was aware of the importance of community education and provided the Southern Berkshire Regional School District with the necessary support to educate the community. In the case of the Sudbury Public Housing Development, also listed in finding 4.3.3 the community wasn’t educated and the technology was used incorrectly, decreasing the effectiveness of the project. 
 
 \section{Recommendations Relating to Feasibility Studies}
+\par In all of the project sites that we studied, data from our on-site visits highlighted the importance of commissioning a feasibility study. Therefore, we recommend that:
 \subsection{We recommend that a feasibility study be completed at each potential project site}
 \par Since each municipal building is not the same in design, each renewable thermal system installation will be different. Occasionally, especially in older school buildings, there are issues with the building (leaking pipes, asbestos, etc.) that can be uncovered during the investigative work involved in producing a case study. If a project began and issues like asbestos were present in the building, many problems would arise including time delays, and increased expenses. Feasibility studies can also include options involving different renewable system designs as well as cost and maintenance comparisons of the proposed renewable system and the existing fossil fuel system. As stated in finding 4.3.1, commissioning a feasibility study prior to beginning a renewable project can be very valuable. Therefore, we recommend that a feasibility study be completed at each potential project site. Since this recommendation can be aimed at both the DOER and potential project sites, we have provided both as recommendations that follow.
 
@@ -29,13 +32,14 @@ It is important to educate the community about the new technology that project s
 \subsection{We recommend that the DOER strongly suggest or make it a requirement of their grant program that renewable thermal project sites commission a feasibility study prior to beginning a renewable thermal project}
 \par We recognize that the DOER does not only fund these renewable thermal projects, but also provides the project site leaders and communities with guidance and support throughout the project process. Since the DOER provides funding to the project sites, they have the ability to leverage this funding when suggesting that the project sites commission a feasibility study. For this reason, we recommend that the DOER make it their responsibility to ensure that a feasibility study be completed at a project site before construction begins.
 
-\subsection{We recommend that the DOER provide funding to commission a feasibility study that include a comparison of multiple renewable thermal heating and cooling systems}
+\subsection{We recommend that the DOER provide funding to commission a feasibility study that includes a comparison of multiple renewable thermal heating and cooling systems}
 \par As mentioned in section 4.3.2. before deciding to install a biomass boiler system, the Southern Berkshire Regional School District considered both geothermal and biomass technologies. The feasibility studies commissioned at the SBRSD were extensive, and illustrated that both options were feasible in this application, but the geothermal system had an incredible large installation cost. These feasibility studies provided them with enough information to make the decision that best fit their application of renewable thermal systems. 
 
 \subsection{We recommend that the DOER provide funding to commission a feasibility study that compares different types of metering systems and their application in the project site before providing funding to sites for metering systems}
 \par Similar to how a feasibility study should be commissioned to determine which renewable technology will work the best in a given project, project sites that wish to utilize a metering system should conduct a feasibility study prior to metering system installation. The feasibility study could help determine which metering system would work best in any given project application. As explained in finding 4.3.7, in the Sudbury Public Housing Development, a feasibility study was not commissioned to determine which metering system would work best within the development. Because a feasibility study was not commissioned, there were many problems with the metering system. 
 
 \section{Recommendations Relating to Experienced Engineers and Contractors}
+\par We heard from interviewees at all three sites that the experience of the engineers working on the project makes a huge difference in the project planning and installation processes. We therefore recommend that:
 \subsection{We recommend that project sites work with engineering firms and contractors that are familiar with renewable technologies}
 \par As mentioned in finding in 4.3.4.1 Amherst College we learned that having experienced engineers can improve the implemantation of the project. Working with experienced engineers allowed the maintenance staff at Amherst College to have access to support when dealing with small issues in the startup of their biomass boiler system. The engineers Amherst College worked with were very experienced with biomass boilers and installations. This experience instilled a sense of confidence and comfort in the staff at Amherst College. On the other hand, as listed in findings 4.3.4.2 and 4.3.4.3,after studying Sudbury Housing Development and Southern Berkshire Regional School we learned that having inexperienced engineers could delay the schedule of the project and the construction itself. 
 
@@ -47,4 +51,4 @@ It is important to educate the community about the new technology that project s
 \par In order to meet the increasing demand for engineering firms/contractors that are experienced with different types of renewable thermal technologies, there must be a large effort placed into education regarding these renewable thermal technologies. This education gap could be filled a number of ways. A few examples include educational programs for contractors from the federal or state governments, incentives from federal/state governments for contractors to attend renewable technical courses in existing community college programs, and increased education on renewable technologies within engineering firms themselves.
 
 \section{Conclusion}
-\par Through the collection and analysis of data from project site leaders at three renewable thermal projects sponsored by the DOER, we achieved our goal  \goal by producing three informational case studies. These case studies can be found in Appendix 5 along with a list of recommendations to both the DOER and potential project site leaders. The case studies produced will both promote the DOER renewable thermal programs and provide information to potential project site leaders that will, along with the list of recommendations, aid in improving renewable thermal project processes. As the number of successful renewable thermal projects increases in the Commonwealth of Massachusetts, greenhouse gas emissions and fossil fuel dependence will decrease, resulting in a healthier and more sustainable future
+\par Through the collection and analysis of data from project site leaders at three renewable thermal projects sponsored by the DOER, we achieved our goal \goal~by producing three informational case studies. These case studies can be found in Appendix 5 along with a list of recommendations to both the DOER and potential project site leaders. The case studies produced will both promote the DOER renewable thermal programs and provide information to potential project site leaders that will, along with the list of recommendations, aid in improving renewable thermal project processes. As the number of successful renewable thermal projects increases in the Commonwealth of Massachusetts, greenhouse gas emissions and fossil fuel dependence will decrease, resulting in a healthier and more sustainable future
